--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "faster-hex"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["zhangsoledad <787953403@qq.com>"]
+edition = "2018"
 keywords = ["simd", "hex"]
 license = "MIT"
 description = "Fast hex encoding."
