--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,11 @@ exclude = [
 
 
 [dev-dependencies]
-criterion = "0.2"
+criterion = "0.3"
 rustc-hex = "1.0"
-hex = "0.3.2"
+hex = "0.4"
 proptest = "0.8"
+rand = "0.7.3"
 
 [[bench]]
 name = "hex"
