Reorganize decode into submodules.
This also removes functions from the public api. hex_decode and
hex_decode_unchecked are the only things exposed by default.
hex_check_sse, hex_check_fallback, and hex_decode_fallback are only
visible when compiled with the 'bench' feature. This means that benches
now need to specify --features=bench when running.

$ cargo bench --features=bench

This makes no changes to the actual implementation and benchmarks
confirm that.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ exclude = [
     "fuzz/*"
 ]
 
+[features]
+bench = []
+
 
 [dev-dependencies]
 criterion = "0.3"
@@ -26,8 +29,10 @@ rand = "0.7.3"
 [[bench]]
 name = "hex"
 harness = false
+required-features = ["bench"]
 
 
 [[bench]]
 name = "check"
 harness = false
+required-features = ["bench"]
