Rename functions removing the hex prefix as it stutters with the name of the crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,10 @@ rand = "0.7.3"
 [[bench]]
 name = "hex"
 harness = false
-required-features = ["bench"]
+required-features = ["bench", "avx2", "sse41"]
 
 
 [[bench]]
 name = "check"
 harness = false
-required-features = ["bench"]
+required-features = ["bench", "avx2", "sse41"]
