--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "faster-hex"
 version = "0.6.1"
 authors = ["zhangsoledad <787953403@qq.com>"]
 edition = "2018"
-keywords = ["simd", "hex"]
+keywords = ["simd", "hex", "no-std"]
 license = "MIT"
 description = "Fast hex encoding."
 repository = "https://github.com/NervosFoundation/faster-hex"
@@ -15,6 +15,12 @@ exclude = [
     "fuzz/*",
     "CHANGELOG.md"
 ]
+
+[features]
+default = ["std"]
+std = ["alloc"]
+alloc = []
+
 
 
 [dev-dependencies]
