--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ exclude = [
 ]
 
 [dependencies]
-serde = { version = "1.0", optional = true, features = ["derive"]}
+serde = { version = "1.0", optional = true }
 
 [features]
 default = ["std", "serde"]
